<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Hooked On Play -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageViewTitle"
            android:src="@drawable/application_title"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/start_title_desc"
            android:layout_margin="24dp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/pagerQuestions"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="48dp"
            android:paddingRight="16dp"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewLines"
                android:src="@drawable/items_three"
                android:layout_weight="1"
                android:contentDescription="@string/start_lines_desc"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewDifficulty"
                android:src="@drawable/difficulty_easy"
                android:layout_weight="1"
                android:contentDescription="@string/start_difficulty_desc"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>