<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2015 Hooked On Play -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/cardViewMap"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbarMain"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageMap"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/country_map_desc"
            android:padding="@dimen/view_horizontal_margin"
            android:src="@drawable/map_morocco" />

        <ImageView
            android:id="@+id/imageFlag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/country_flag_desc"
            android:padding="@dimen/view_horizontal_margin"
            android:src="@drawable/flag_generic" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/countryMetricsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cardViewMap" />

    <ImageView
        android:id="@+id/imageViewFullScreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/country_map_desc"
        android:visibility="gone" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/white"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_addButtonPlusIconColor="@color/half_black"
        fab:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_open_wikipedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/country_fab_wikipedia"
            fab:fab_icon="@drawable/ic_action_wiki"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_open_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/country_fab_location"
            fab:fab_icon="@drawable/ic_action_place_light"
            fab:fab_colorPressed="@color/white_pressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</RelativeLayout>